[package]
name = "modem-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["macros"] }
prometheus-client = "0.22.1"
reqwest = "0.12.4"
anyhow = "1.0.83"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
quick-xml = { version = "0.31.0", features = ["serialize"] }
warp = "0.3.7"
